force-app/main/default/objects/Error_Log_Configuration__mdt/Error_Log_Configuration__mdt.object-meta.xml
<CustomObject>
    <label>Error Log Configuration</label>
    <pluralLabel>Error Log Configurations</pluralLabel>
</CustomObject>