force-app/main/default/objects/Error_Log_Configuration__mdt/fields/Extended_Class_For_Custom_PE__c.field-meta.xml
<CustomField>
    <fullName>Extended_Class_For_Custom_PE__c</fullName>
    <description>This class name can be implemented to write own custom logic to override the existing one with Extended class for Custom Platform Event</description>
    <inlineHelpText>This class name can be implemented to write own custom logic to override the existing one with Extended class for Custom Platform Event</inlineHelpText>
    <label>Extended Class For Custom PE</label>
    <length>200</length>
    <type>Text</type>
</CustomField>