force-app/main/default/objects/Error_Log_Configuration__mdt/fields/Extended_Class_For_Flow_PE__c.field-meta.xml
<CustomField>
    <fullName>Extended_Class_For_Flow_PE__c</fullName>
    <description>This class name can be implemented to write own custom logic to override the existing one with Extended class for FlowExecutionErrorEvent</description>
    <inlineHelpText>This class name can be implemented to write own custom logic to override the existing one with Extended class for FlowExecutionErrorEvent</inlineHelpText>
    <label>Extended Class For Flow PE</label>
    <length>200</length>
    <type>Text</type>
</CustomField>