force-app/main/default/objects/Error_Log_Configuration__mdt/fields/Is_Using_Packaged_Code_For_Custom_PE__c.field-meta.xml
<CustomField>
    <fullName>Is_Using_Packaged_Code_For_Custom_PE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Using Packaged Code For Custom PE?</label>
    <type>Checkbox</type>
</CustomField>