force-app/main/default/objects/Error_Log_Configuration__mdt/validationRules/Package_Class_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Package_Class_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>OR(AND(NOT(Is_Using_Packaged_Code_For_Batch_PE__c),ISBLANK(Extended_Class_For_Batch_PE__c)),AND(NOT(Is_Using_Packaged_Code_For_Custom_PE__c),ISBLANK(Extended_Class_For_Custom_PE__c)),AND(NOT(Is_Using_Packaged_Code_For_Flow_PE__c),ISBLANK(Extended_Class_For_Flow_PE__c)))</errorConditionFormula>
    <errorMessage>Please provide the class name if not using the package default class.</errorMessage>
</ValidationRule>